2012-11-07  Pedro Alves  <palves@redhat.com>

	* MAINTAINERS: New FSF-appointed maintainers replace the Steering
	Committee.

2012-11-07  Pierre Muller  <muller@sourceware.org>

	* common/linux-osdata.c (dirent.h): ARI fix: Remove.
	File already uses "gdb_dirent.h" header.

2012-11-07  Yao Qi  <yao@codesourcery.com>

	* breakpoint.c (get_tracepoint_by_number): Remove 'extern int
	tracepoint_count'.

2012-11-06  Tom Tromey  <tromey@redhat.com>

	* target.h (inferior_has_forked, inferior_has_vforked)
	(inferior_has_execd, inferior_has_called_syscall): Remove
	declarations.

2012-11-06  Pierre Muller  <muller@sourceware.org>

	* remote.c (remote_insert_hw_breakpoint): ARI fix,
	add missing internalization markup.

2012-11-06  Pedro Alves  <palves@redhat.com>

	PR gdb/14810

	* breakpoint.c (bpstat_stop_status): Skip disabled locations.

2012-11-06  Pierre Muller  <muller@sourceware.org>

	* contrib/ari/create-web-ari-in-src.sh: Avoid problem if script
	is not executable.

2012-11-05  Joel Brobecker  <brobecker@adacore.com>

	* gnulib/update-gnulib.sh: New script.

2012-11-05  Stephane Carrez  <Stephane.Carrez@gmail.com>

	* MAINTAINERS: Update my email address.

2012-11-05  Tom Tromey  <tromey@redhat.com>

	* frame.c (put_frame_register): Don't use temporary buffer.

2012-11-05  Pedro Alves  <palves@redhat.com>

	* inferior.c (exit_inferior_1): Clear 'vfork_parent' in the vfork
	child.  Clear 'pending_detach'.
	* infrun.c (handle_vfork_child_exec_or_exit): Clear
	'pending_detach' in the vfork parent.

2012-11-05  Doug Evans  <dje@google.com>

	Add support for DWP files.  http://gcc.gnu.org/wiki/DebugFissionDWP
	* contrib/cc-with-tweaks.sh: Add -p parameter to invoke dwp.
	* dwarf2read.c: #include "elf-bfd.h".
	(struct dwarf2_per_objfile): New members dwp_checked, dwp_file.
	(dwop_section_names): Renamed from dwo_section names.  All uses
	updated.  Add entries for .debug_cu_index, .debug_tu_index.
	(struct dwo_file): Rename dwo_name to name, dwo_bfd to dbfd.