@@ -22,6 +22,8 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#include "defs.h"
+
 #include <ctype.h>
 #include <errno.h>
 #include <limits.h>
@@ -52,7 +54,6 @@
 
 #include <portinfo.h>
 
-#include "defs.h"
 #include "inferior.h"
 #include "symtab.h"
 #include "value.h"
